Добавлен эффект при нажатии в блоке partners

--- a/css/style.css
+++ b/css/style.css
@@ -1082,6 +1082,8 @@ body {
     transition: transform 1s ease;
 }
 .partners-link:hover {
-    transform: scale(1.1);
-
+    transform: scale(1.2);
+}
+.partners-link:active {
+    transform: scale(1.1)
 }
